# snowflake-customer360-application-demo

./: .env.example  .gitignore  COMPREHENSIVE_INVENTORY.md  DATA_FLOW.md  DEMO_QUESTIONS.md  EVALUATION_CRITERIA.md  FEATURE_SUMMARY.md  Makefile  PROJECT_ANALYSIS.md  PROJECT_STATUS.md  README.md  early_design_prompts.md  prompted_done.md  pyproject.toml  requirements.txt  test_snowflake_query.sql
.claude/: instructions  resources
data_generation/: README.md  __main__.py  cli.py  config.py  customer_generator.py  s3_uploader.py
dbt_customer_analytics/: .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml  profiles_native.yml  profiles_snowflake.yml
docs/: ARCHITECTURE.md  CUSTOMER_360_PLATFORM_STUDY_GUIDE.md  DBT_CLOUD_SETUP_GUIDE.md  ONBOARDING_GUIDE.md  SETUP_GUIDE.md  aggregate_marts_guide.md  architecture_diagram.md  customer_segmentation_guide.md  dbt_bronze_refactor_summary.md  guide__cortex_analyst_deployment.md  guide__github_deployment.md  guide__ml_pipeline.md  overview__ml_model_card.md  phase1_completion_summary.md  prompt_2.1_completion_summary.md  prompt_2.2_completion_summary.md  prompt_2.3_completion_summary.md  prompt_2.4_completion_summary.md  prompt_2.5_completion_summary.md  prompt_3.1_completion_summary.md  prompt_3.2_completion_summary.md  prompt_3.3_completion_summary.md  prompt_3.4_completion_summary.md  prompt_3.5_completion_summary.md  prompt_4.1_completion_summary.md  prompt_4.2_completion_summary.md  prompt_4.3_completion_summary.md  prompt_5.1_completion_summary.md  prompt_5.2_completion_summary.md  prompting__prompt_plan.md  (+7 more)
(+150 files in other folders)
